--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          cd multimodal-rag-pipeline
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
@@ -33,7 +34,9 @@ jobs:
         run: flake8 src --max-line-length=100
 
       - name: Run tests
-        run: pytest -q
+        run: |
+          cd multimodal-rag-pipeline
+          pytest -q
 
   docker:
     runs-on: ubuntu-latest
