--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@
 # Date: 2025-09-26
 # Position: Data-Science
 # ---------------------------------------------------------
-
-name: CI/CD
+name: CI/CD - All Projects
 
 on:
   push:
@@ -15,45 +14,36 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        project: [langchain, multimodal-rag-pipeline, rag-qa-bot-langchain]
+    defaults:
+      run:
+        working-directory: ${{ matrix.project }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
-        run: |
-          cd multimodal-rag-pipeline
+      - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Lint with flake8
-        run: flake8 src --max-line-length=100
+      - run: pytest -q
 
-      - name: Run tests
-        run: |
-          cd multimodal-rag-pipeline
-          pytest -q
-
-  docker:
+  docker-multimodal:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
+      - uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
-        run: docker build -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest -f multimodal-rag-pipeline/Dockerfile multimodal-rag-pipeline
-
-      - name: Push Docker image
-        run: docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest
+      - run: docker build -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest -f multimodal-rag-pipeline/Dockerfile multimodal-rag-pipeline
+      - run: docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest
