--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-
+          
       - run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+          else
+            echo "⚠️ No requirements.txt found in ${{ matrix.project }}, skipping install"
+          fi
 
       - run: pytest -q
 
