--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
         with:
           python-version: "3.10"
 
-      - run: |
+      - name: Install dependencies (if available)
+        run: |
           if [ -f requirements.txt ]; then
             python -m pip install --upgrade pip
             pip install -r requirements.txt
@@ -35,7 +36,8 @@ jobs:
             echo "⚠️ No requirements.txt found in ${{ matrix.project }}, skipping install"
           fi
 
-      - run: pytest -q || echo "⚠️ No tests found, skipping"
+      - name: Run tests (if available)
+        run: pytest -q || echo "⚠️ No tests found in ${{ matrix.project }}, skipping"
 
   docker-multimodal:
     runs-on: ubuntu-latest
@@ -43,11 +45,25 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: docker/login-action@v2
+      - name: Log in to GitHub Container Registry with PAT
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
-      - run: docker build -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest -f multimodal-rag-pipeline/Dockerfile multimodal-rag-pipeline
-      - run: docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest
+      - name: Extract Git commit SHA
+        id: vars
+        run: echo "GIT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+
+      - name: Build Docker image
+        run: |
+          docker build \
+            -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest \
+            -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:${{ env.GIT_SHA }} \
+            -f multimodal-rag-pipeline/Dockerfile multimodal-rag-pipeline
+
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest
+          docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:${{ env.GIT_SHA }}
