--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,7 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies (if available)
-        run: |
+      - run: |
           if [ -f requirements.txt ]; then
             python -m pip install --upgrade pip
             pip install -r requirements.txt
@@ -36,8 +35,7 @@ jobs:
             echo "⚠️ No requirements.txt found in ${{ matrix.project }}, skipping install"
           fi
 
-      - name: Run tests (if available)
-        run: pytest -q || echo "⚠️ No tests found in ${{ matrix.project }}, skipping"
+      - run: pytest -q || echo "⚠️ No tests found, skipping"
 
   docker-multimodal:
     runs-on: ubuntu-latest
@@ -45,25 +43,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Log in to GitHub Container Registry with PAT
-        uses: docker/login-action@v2
+      - uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract Git commit SHA
-        id: vars
-        run: echo "GIT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
-
-      - name: Build Docker image
-        run: |
-          docker build \
-            -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest \
-            -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:${{ env.GIT_SHA }} \
-            -f multimodal-rag-pipeline/Dockerfile multimodal-rag-pipeline
-
-      - name: Push Docker image
-        run: |
-          docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest
-          docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:${{ env.GIT_SHA }}
+      - run: docker build -t ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest -f multimodal-rag-pipeline/Dockerfile multimodal-rag-pipeline
+      #- run: docker push ghcr.io/helmighanmi/generative-ai-applications/multimodal-rag-pipeline:latest
